--- a/k8s/deployment-db.yaml
+++ b/k8s/deployment-db.yaml
@@ -15,7 +15,7 @@ spec:
         name: db
     spec:
       containers:
-      - name: mysql:5.7
+      - name: mysql
         image: mysql:5.7
         ports:
         - containerPort: 3306
