--- a/jenkins-server-cfn-template.yml
+++ b/jenkins-server-cfn-template.yml
@@ -106,13 +106,14 @@ Resources:
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
           ./aws/install
-          # install aws ecr credential helper
-          # yum install amazon-ecr-credential-helper -y
-          # mkdir -p /home/jenkins/.docker
-          # cd /home/jenkins/.docker
-          # echo '{"credsStore": "ecr-login"}' > config.json
-          
-          
+          # download and install kubectl
+          curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.17.9/2020-08-04/bin/linux/amd64/kubectl
+          chmod +x ./kubectl
+          mv ./kubectl /usr/local/bin
+          # download and install eksctl
+          curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+          mv /tmp/eksctl /usr/local/bin
+
 Outputs:
   JenkinsDNS:
     Description: Jenkins Server DNS Name 
