--- a/k8s/pv-ebs.yaml
+++ b/k8s/pv-ebs.yaml
@@ -8,7 +8,7 @@ spec:
   capacity:
     storage: "10Gi" 
   accessModes:
-    - "ReadWriteOnce"
+    - "ReadWriteMany"
   awsElasticBlockStore: 
     fsType: "ext4"
     volumeID: $(EBS_VOLUME_ID)
