--- a/k8s/pvc-for-ebs.yaml
+++ b/k8s/pvc-for-ebs.yaml
@@ -7,7 +7,7 @@ spec:
     matchLabels:
       name: pv-ebs
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   resources:
     requests:
       storage: 500Mi
