--- a/k8s/pvc-for-ebs.yaml
+++ b/k8s/pvc-for-ebs.yaml
@@ -3,9 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim
 spec:
-  selector:
-    matchLabels:
-      name: pv-ebs
+  storageClassName: manual
   accessModes:
   - ReadWriteMany
   resources:
