--- a/k8s/deployment-app.yaml
+++ b/k8s/deployment-app.yaml
@@ -19,14 +19,8 @@ spec:
         image: 046402772087.dkr.ecr.us-east-1.amazonaws.com/matt/jenkins-handson:latest
         ports:
         - containerPort: 80
-        env:
-        - name: MYSQL_DATABASE_HOST
-          value: service-db.default.svc.cluster.local
-        - name: MYSQL_DATABASE_USER
-          value: clarusway
-        - name: MYSQL_DATABASE_PASSWORD
-          value: Clarusway
-        - name: MYSQL_DATABASE_DB
-          value: phonebook
-        - name: MYSQL_DATABASE_PORT
-          value: "3306"
+        envFrom:
+          - configMapKey:
+              name: config-app
+          - secretKey:
+              name: secret-app
